--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Grails Improx Plugin : " />
+    <meta name="description" content="Grails Improx Plugin" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,19 +19,19 @@
           <a id="forkme_banner" href="https://github.com/kobo/grails-improx">View on GitHub</a>
 
           <h1 id="project_title">Grails Improx Plugin</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/kobo/grails-improx/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/kobo/grails-improx/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+          <h2 id="project_tagline">Interactive Mode Proxy</h2>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Under construction...</p>
+        <ul>
+          <li><a href="docs/guide/index.html">User Guide (Page per chapter)</a></li>
+          <li><a href="docs/guide/single.html">User Guide (Single page)</a></li>
+          <li><a href="docs/gapi/index.html">Groovy API docs</a></li>
+          <!--<li><a href="docs/api/index.html">Java API docs</a></li>-->
+        </ul>
       </section>
     </div>
 
