updated to latest

--- a/all-docs.html
+++ b/all-docs.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title>improx Documentation</title>
+        <title>grails-improx Documentation</title>
     </head>
 
     <body>
