--- a/gapi/DefaultPackage/package-summary.html
+++ b/gapi/DefaultPackage/package-summary.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>DefaultPackage (improx)</title>
+<title>DefaultPackage (grails-improx)</title>
 <META NAME="keywords" CONTENT="DefaultPackage package">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <LINK REL ="stylesheet" TYPE="text/css" HREF="../stylesheet.css" TITLE="Style">
@@ -11,7 +11,7 @@
 <SCRIPT type="text/javascript">
 function windowTitle()
 {
-    parent.document.title="DefaultPackage (improx)";
+    parent.document.title="DefaultPackage (grails-improx)";
 }
 </SCRIPT>
 <NOSCRIPT>
@@ -93,11 +93,6 @@ Package DefaultPackage
 
         <TR BGCOLOR="white" CLASS="TableRowColor">
         <TD WIDTH="15%"><B><A HREF="ImproxGrailsPlugin.html" title="class in DefaultPackage">ImproxGrailsPlugin</A></B></TD>
-        <TD></TD>
-        </TR>
-
-        <TR BGCOLOR="white" CLASS="TableRowColor">
-        <TD WIDTH="15%"><B><A HREF="UrlMappings.html" title="class in DefaultPackage">UrlMappings</A></B></TD>
         <TD></TD>
         </TR>
 
