--- a/gapi/index.html
+++ b/gapi/index.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>
-Index (improx)
+Index (grails-improx)
 </TITLE>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link href="groovy.ico" type="image/x-icon" rel="shortcut icon">
