--- a/gapi/org/jggug/kobo/improx/package-summary.html
+++ b/gapi/org/jggug/kobo/improx/package-summary.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>org.jggug.kobo.improx (improx)</title>
+<title>org.jggug.kobo.improx (grails-improx)</title>
 <META NAME="keywords" CONTENT="org.jggug.kobo.improx package">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <LINK REL ="stylesheet" TYPE="text/css" HREF="../../../../stylesheet.css" TITLE="Style">
@@ -11,7 +11,7 @@
 <SCRIPT type="text/javascript">
 function windowTitle()
 {
-    parent.document.title="org.jggug.kobo.improx (improx)";
+    parent.document.title="org.jggug.kobo.improx (grails-improx)";
 }
 </SCRIPT>
 <NOSCRIPT>
