--- a/guide/pages/startServer.html
+++ b/guide/pages/startServer.html
@@ -49,8 +49,7 @@ function addJsClass() {
         
         
     </div>
-    <p>This plugin provides the way of using interactive mode from other process via TCP.
-</p>
+    <p>Provides the way of using interactive mode from other process via TCP.</p>
 </div>
 
 
