--- a/guide/single.html
+++ b/guide/single.html
@@ -44,8 +44,7 @@ function addJsClass(el) {
                 
                 
             </div>
-            <p>This plugin provides the way of using interactive mode from other process via TCP.
-</p>
+            <p>Provides the way of using interactive mode from other process via TCP.</p>
         </div>
 
 
