--- a/ref/Server Command Line/improx-stop.html
+++ b/ref/Server Command Line/improx-stop.html
@@ -50,8 +50,7 @@ function addJsClass(el) {
         
         
     </div>
-    <p>This plugin provides the way of using interactive mode from other process via TCP.
-</p>
+    <p>Provides the way of using interactive mode from other process via TCP.</p>
 </div>
 
 
