updated to latest and applied google analytics tracking

--- a/guide/pages/installClientScripts.html
+++ b/guide/pages/installClientScripts.html
@@ -89,7 +89,7 @@ Execute the following command:<p class="paragraph"/><div class="code"><pre>grail
       ├── improxClient.groovy
       ├── improxClient.sh
       ├── improxSmartInvoker.groovy
-      └── improxSmartInvoker.sh</pre></div><p class="paragraph"/>You should move the directory wherever you want, for example <code>~/.grails/improx</code> or <code>~/bin</code>.
+      └── improxSmartInvoker.sh</pre></div><p class="paragraph"/>If you want to use shell script, give an execute permission to the scripts as follows:<p class="paragraph"/><div class="code"><pre>$ chmod +x improx&#45;resources/scripts/&#42;.sh</pre></div><p class="paragraph"/>You should move the directory wherever you want, for example <code>~/.grails/improx</code> or <code>~/bin</code>.
 If you deploy it to an appropriate path, you don't have to install the scripts whenever you use it on new project.
 So I recommend that at least it's not under the application project directory.
 
@@ -158,6 +158,17 @@ So I recommend that at least it's not under the application project directory.
 <div id="footer">
     
     
+<script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-3438563-5']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+</script>
+
 </div>
 
 <script type="text/javascript" src="../js/docs.js"></script>
