--- a/guide/pages/standardProtocol.html
+++ b/guide/pages/standardProtocol.html
@@ -149,6 +149,17 @@ The client knows that the session is done by closing the socket.
 <div id="footer">
     
     
+<script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-3438563-5']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+</script>
+
 </div>
 
 <script type="text/javascript" src="../js/docs.js"></script>
