--- a/ref/Client Scripts/improxClient.sh.html
+++ b/ref/Client Scripts/improxClient.sh.html
@@ -129,6 +129,17 @@ improxClient.sh test&#45;app unit: sample.SampleUnitTests</pre></div><p class="p
 <div id="footer">
     
     
+<script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-3438563-5']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+</script>
+
 </div>
 
 
