--- a/ref/Server Command Line/improx-start.html
+++ b/ref/Server Command Line/improx-start.html
@@ -132,6 +132,17 @@ grails&#62; 'test&#45;app unit: sample.SampleUnitTests' (Received from port 5301
 <div id="footer">
     
     
+<script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-3438563-5']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+</script>
+
 </div>
 
 
