--- a/guide/introduction.html
+++ b/guide/introduction.html
@@ -2,7 +2,7 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    <title>1 Introduction 0.1</title>
+    <title>1 Introduction 0.2</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8"/>
     <link rel="stylesheet" href="../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8"/>
@@ -72,7 +72,7 @@ function addJsClass() {
 
                     <p><strong>Authors:</strong> Yasuharu NAKANO</p>
 
-                    <p><strong>Version:</strong> 0.1</p>
+                    <p><strong>Version:</strong> 0.2</p>
 
                     
                 </div>
@@ -111,7 +111,7 @@ So you have to frequently switch windows between a interactive mode console and 
 
 
 <h2 id="whatCanIDo">1.2 What can I do with Improx Plugin?</h2>
-If you install this plugin to your application, you can invoke any Grails commands on an interactive mode,
+If you install this plugin to your application, you can invoke almost all Grails commands on an interactive mode,
 which started up in advance on a console, from other processes via a TCP.
 This means that you can quickly run a test which is opened in you favorite editor or IDE.
 If you've appropriately set them up, you'd have only to push a key in order to run it.<p class="paragraph"/>For example, in Sublime Text 2:<p class="paragraph"/>    <img border="0" class="center" src="../img/st2-run.png"></img><p class="paragraph"/><strong class="bold">It has taken only 1.9 sec as total time of the build!</strong>
