--- a/guide/pages/executeCommand.html
+++ b/guide/pages/executeCommand.html
@@ -2,7 +2,7 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    <title>2.3 Execute Command from Client 0.1</title>
+    <title>2.3 Execute Command from Client 0.2</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8"/>
     <link rel="stylesheet" href="../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8"/>
@@ -74,7 +74,7 @@ function addJsClass() {
 
                     <p><strong>Authors:</strong> Yasuharu NAKANO</p>
 
-                    <p><strong>Version:</strong> 0.1</p>
+                    <p><strong>Version:</strong> 0.2</p>
 
                     
                 </div>
@@ -87,7 +87,7 @@ function addJsClass() {
 <h3>via HTTP</h3><p class="paragraph"/>I don't know what kind of environment you have.
 So at first, I introduce the most general way to execute a command as client, using <strong class="bold">HTTP protocol</strong>.
 <a href="../guide/single.html#protocol" class="guide">Improx plugin also supports for HTTP protocol</a>, so you can easily execute a command using it.<p class="paragraph"/>When you open the following URL on web browser:<p class="paragraph"/><div class="code"><pre>http://localhost:8096/help</pre></div><p class="paragraph"/>The result will be shown as the response:<p class="paragraph"/><img border="0" class="center" src="../img/browser-run-help.png"></img><p class="paragraph"/>And a "received" message will be also shown on the console on which <code>improx-start</code> has run:<p class="paragraph"/><img border="0" class="center" src="../img/terminal-received.png"></img><p class="paragraph"/>
-You can execute any command as follows:<p class="paragraph"/><div class="code"><pre>http://localhost:8096/list&#45;plugins
+You can execute a command as follows:<p class="paragraph"/><div class="code"><pre>http://localhost:8096/list&#45;plugins
 http://localhost:8096/test&#45;app%20unit:%20sample.SampleUnitTests</pre></div><p class="paragraph"/><blockquote class="note">
 You have to make a command line encode by URL encoding when invoking via HTTP.
 </blockquote><p class="paragraph"/><h3>Shell Script</h3><p class="paragraph"/>If shell script is available in your environment, you can use <a href="../ref/Client Scripts/improxClient.sh.html" class="clientScripts">improxClient.sh</a>.<p class="paragraph"/><div class="code"><pre>improxClient.sh help
